--- a/app-futbol-back/package.json
+++ b/app-futbol-back/package.json
@@ -26,6 +26,8 @@
     "@prisma/client": "^6.14.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "install": "^0.13.0",
+    "npm": "^11.5.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
