cree las paginas

--- a/AppFutbol-front/tsconfig.json
+++ b/AppFutbol-front/tsconfig.json
@@ -1,4 +1,7 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "jsx": "react-native",
+    "types": ["nativewind/types"]
+  },
   "extends": "expo/tsconfig.base"
 }
